@@ -24,7 +24,7 @@
 
 options $@
 setup_workdir
-
+set -e
 cat <<EOF >$WORKDIR/debian/rules
 #!/usr/bin/make -f
 DEB_PYTHON_SYSTEM = pysupport
@@ -43,7 +43,7 @@ cp -R distutils/* $WORKDIR
 
 build_package
 
-dpkg -c $WORKDIR/../python-cdbs-testsuite_0.1_all.deb | grep -q /usr/share/python-support/python-cdbs-testsuite/testing/foo.py || return_fail
+dpkg -c $WORKDIR/../python-cdbs-testsuite_0.1_all.deb | grep -q '/usr/share/py\(thon-support/python-cdbs-testsuite\|shared\)/testing/foo.py' || return_fail
 
 clean_workdir
 return_pass
